[tool.poetry]
name = "advancedhpc2023"
version = "0.1.0"
description = ""
authors = ["truonghm <truong173@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numba = "^0.58.1"
ipykernel = "^6.25.2"
nbformat = "^5.9.2"
matplotlib = "^3.8.0"
pillow = "^10.1.0"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
